# git-deps

./: INSTALL.md  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: CI.yml
git_deps/: __init__.py  detector.py  gitutils.py
git_deps/html/: git-deps.html
git_deps/html/js/: .gitignore  bundle.js
git_deps/listener/: cli.py
