[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-deps"
description = "automatically detect dependencies between git commits"
readme = "README.md"
license = "GPL-2.0-or-later"
authors = [
    {name = "Adam Spiers", email = "git@adamspiers.org"}
]
maintainers = [
    {name = "Adam Spiers", email = "git@adamspiers.org"}
]
keywords = ["git", "dependencies", "commits", "analysis", "version-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "pip >= 10.0.1",
    "pygit2 >= 0.24.0",
    "flask"
]
version = "0.6.0"

[project.urls]
Homepage = "https://github.com/aspiers/git-deps"
Repository = "https://github.com/aspiers/git-deps"
Documentation = "https://github.com/aspiers/git-deps#readme"
"Bug Tracker" = "https://github.com/aspiers/git-deps/issues"

[project.scripts]
git-deps = "git_deps.cli:run"
gitfile-handler = "git_deps.handler:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "tox"
]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
packages = ["git_deps", "git_deps.listener"]
include-package-data = true

[tool.setuptools.package-data]
git_deps = [
    "html/*.html",
    "html/*.json",
    "html/css/*.css",
    "html/js/*.js",
    "html/js/*.coffee",
    "html/js/lib/*.js"
]

[tool.setuptools.package-dir]
"" = "."

# Script files that should be installed
[tool.setuptools.data-files]
"bin" = ["bin/git-fixup"]
"share/git_deps" = ["share/gitfile-handler.desktop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=git_deps",
    "--cov-report=term-missing",
    "--verbose"
]

[tool.coverage.run]
source = ["git_deps"]
omit = [
    "tests/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".tox"
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 4.0
envlist = py38,py39,py310,py311,flake8
skip_missing_interpreters = True

[testenv]
extras = test
changedir = tests
commands =
    pytest {posargs}

[testenv:flake8]
skip_install = True
changedir = {toxinidir}
deps = flake8
commands = flake8 git_deps tests

[testenv:dev]
extras = dev
commands = 
    pytest tests/
    flake8 git_deps tests
"""

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
]
